iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_mds_commands_test_1_mds1.local_8.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "36001405f701ec9f7a4d44a2876e6d084",
    "scsi80": "SLIO-ORG mdt1            f701ec9f-7a4d-44a2-876e-6d084638901b",
    "major": "8",
    "minor": "128",
    "devpath": "/devices/platform/host3/session2/target3:0:0/3:0:0:1/block/sdi",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "4259661748357009441",
    "fs_label": "mdt0",
    "paths": [
      "/dev/disk/by-id/scsi-36001405f701ec9f7a4d44a2876e6d084",
      "/dev/disk/by-id/wwn-0x6001405f701ec9f7a4d44a2876e6d084",
      "/dev/disk/by-path/fc---lun-1",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-1",
      "/dev/disk/by-label/mdt0",
      "/dev/disk/by-uuid/4259661748357009441",
      "/dev/sdi"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-3",
          "serial": "36001405f701ec9f7a4d44a2876e6d084",
          "scsi80": "SLIO-ORG mdt1            f701ec9f-7a4d-44a2-876e-6d084638901b",
          "dm_name": "mpathb",
          "size": 5368709120,
          "major": "253",
          "minor": "3",
          "filesystem_type": "zfs_member",
          "fs_uuid": "4259661748357009441",
          "fs_label": "mdt0",
          "paths": [
            "/dev/mapper/mpathb",
            "/dev/disk/by-id/dm-name-mpathb",
            "/dev/disk/by-id/dm-uuid-mpath-36001405f701ec9f7a4d44a2876e6d084",
            "/dev/disk/by-label/mdt0",
            "/dev/disk/by-uuid/4259661748357009441",
            "/dev/dm-3"
          ],
          "children": [],
          "mount": null
        }
      }
    ]
  }
}
